--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -42,7 +42,9 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/name"
                 android:maxLines="1"
+                android:minLines="1"
                 android:focusable="true"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
 
@@ -54,7 +56,9 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/age"
                 android:maxLines="1"
+                android:minLines="1"
                 android:focusable="true"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 />
@@ -65,7 +69,9 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/work"
                 android:maxLines="1"
+                android:minLines="1"
                 android:focusable="true"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 />
@@ -76,7 +82,9 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
                 android:maxLines="1"
+                android:minLines="1"
                 android:focusable="true"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 />
@@ -88,7 +96,9 @@
                 android:hint="@string/password"
                 android:inputType="numberPassword"
                 android:maxLines="1"
+                android:minLines="1"
                 android:focusable="true"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 />
@@ -100,7 +110,9 @@
                 android:hint="@string/conform_password"
                 android:inputType="numberPassword"
                 android:maxLines="1"
+                android:minLines="1"
                 android:focusable="true"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 />
@@ -111,7 +123,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/submit"
                 android:maxLines="1"
+                android:minLines="1"
                 android:focusable="true"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 />
