api call retrofit show in cardview

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="green">#14C41B</color>
+    <color name="blue">#2540DB</color>
+    <color name="red">#DD1C1C</color>
+    <color name="yellow">#EDBA1F</color>
 </resources>
