--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,7 +4,6 @@
     <item
         android:id="@+id/log_out"
         android:icon="@drawable/logout_24"
-        android:title="@string/logout"
-        />
+        android:title="@string/logout" />
 
 </menu>
